--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,5 +11,5 @@
   <div id="app">
   </div>
 </body>
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
 </html>
