--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../src/Styles/00.Global/global.css">
+  <link rel="stylesheet" href="./assets/Styles/00.Global/global.css">
 </head>
 <body>
   <div id="app">
